@@ -6,6 +6,7 @@ use Test::More tests => 4;
 use HTTP::Request::Common;
 
 BEGIN {
+	delete @ENV{qw(PATH)};  # Placates taint-unsafe Cwd.pm in 5.6.1
     use_ok( 'WWW::Mechanize' );
 }
 
