@@ -4,6 +4,7 @@ use strict;
 use Test::More tests => 6;
 use URI::file;
 
+delete @ENV{qw(PATH)};  # Placates taint-unsafe Cwd.pm in 5.6.1
 use_ok( 'WWW::Mechanize' );
 
 my $mech = WWW::Mechanize->new( cookie_jar => undef );
